--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,22 +17,23 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
-
 flutter:
 
   uses-material-design: true
 
+  assets:
+    - assets/images/
+
   fonts:
-     - family: Montserrat
-       fonts:
-         - asset: assets/fonts/Montserrat-Bold.ttf
-           weight: 700
-         - asset: assets/fonts/Montserrat-SemiBold.ttf
-           weight: 600
-         - asset: assets/fonts/Montserrat-Medium.ttf
-           weight: 500
-         - asset: assets/fonts/Montserrat-Regular.ttf
-           weight: 400
-         - asset: assets/fonts/Montserrat-Light.ttf
-           weight: 300
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Montserrat-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Montserrat-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Montserrat-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Montserrat-Light.ttf
+          weight: 300
